--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -4,26 +4,19 @@ name: Upload Python Package
 # That action is released under an MIT License, and as such, so is this workflow.
 
 on:
-  workflow_dispatch:
   release:
-    types: [created]
-
+    types: [released]
 
 env:
-  PUBLISH_REGISTRY: https://test.pypi.org/simple
+  PUBLISH_REGISTRY: https://test.pypi.org/simple/
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-    env:
-      Release_Tag: ${{ github.event.release.tag_name }}
     steps:
       - uses: actions/checkout@v4
-
-      - name: testing
-        run: echo "$Release_Tag"
 
       - name: Install poetry
         run: |
@@ -40,10 +33,14 @@ jobs:
           sed -i '0,/version =.*/s//version = "'"${{ github.event.release.tag_name }}"'"/' ./pyproject.toml
         shell: bash
 
+      - name: Update poetry.lock
+        run: |
+          poetry lock
+#          poetry check # Error message: "Declared README files must be of same type: found text/markdown, text/plain." Not sure why
 
       - name: Add and Commit Version
         run: |
-          git add ./src/isar/__init__.py ./pyproject.toml
+          git add ./src/isar/__init__.py ./pyproject.toml ./poetry.lock
           git config --global user.name "PyPI Poetry Publish Bot"
           git config --global user.email "fg_robots_dev@equinor.com"
           git commit -m "Change version to ${{ github.event.release.tag_name }}" --allow-empty
@@ -59,5 +56,5 @@ jobs:
       - name: Build and Publish
         run: |
           poetry config repositories.publish $PUBLISH_REGISTRY
-#          poetry publish -p ${{ secrets.PYPI_TOKEN }} -u __token__ -r publish --build
+          poetry publish -p ${{ secrets.PYPI_TOKEN }} -u __token__ -r publish --build
         shell: bash
