--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -4,10 +4,8 @@ name: Upload Python Package
 # That action is released under an MIT License, and as such, so is this workflow.
 
 on:
-  workflow_dispatch:
   release:
-    types: [created]
-
+    types: [released]
 
 env:
   PUBLISH_REGISTRY: https://test.pypi.org/simple
@@ -18,11 +16,11 @@ jobs:
     permissions:
       contents: write
     env:
-      Release_Tag: ${{ github.event.release.tag_name }}
+      Release_Tag: ${{ github.event.release.tag_name }} # TODO Finish or remove!
     steps:
       - uses: actions/checkout@v4
 
-      - name: testing
+      - name: testing # TODO remove, used for testing!
         run: echo "$Release_Tag"
 
       - name: Install poetry
@@ -40,10 +38,14 @@ jobs:
           sed -i '0,/version =.*/s//version = "'"${{ github.event.release.tag_name }}"'"/' ./pyproject.toml
         shell: bash
 
+      - name: Update poetry.lock
+        run: |
+          poetry lock
+#          poetry check # Error message: "Declared README files must be of same type: found text/markdown, text/plain." Not sure why
 
       - name: Add and Commit Version
         run: |
-          git add ./src/isar/__init__.py ./pyproject.toml
+          git add ./src/isar/__init__.py ./pyproject.toml ./poetry.lock
           git config --global user.name "PyPI Poetry Publish Bot"
           git config --global user.email "fg_robots_dev@equinor.com"
           git commit -m "Change version to ${{ github.event.release.tag_name }}" --allow-empty
