--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -7,9 +7,6 @@ on:
   release:
     types: [released]
 
-env:
-  PUBLISH_REGISTRY: https://test.pypi.org/simple
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -55,6 +52,6 @@ jobs:
 
       - name: Build and Publish
         run: |
-          poetry config repositories.publish $PUBLISH_REGISTRY
-#          poetry publish -p ${{ secrets.PYPI_TOKEN }} -u __token__ -r publish --build
+          poetry config repositories.publish https://pypi.org/legacy/
+          poetry publish -p ${{ secrets.PYPI_TOKEN }} -u __token__ -r publish --build
         shell: bash
