--- a/.github/workflows/publish_isar_base_image.yml
+++ b/.github/workflows/publish_isar_base_image.yml
@@ -11,7 +11,7 @@ name: Create and publish a Docker image
 
 on:
   release:
-    types: [published]
+    types: [published] # PING
   workflow_dispatch:
 
 env:
@@ -27,10 +27,10 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3 # PING
 
       - name: Log in to the Container registry
-        uses: docker/login-action@v2
+        uses: docker/login-action@v2 # PING
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -38,12 +38,12 @@ jobs:
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@v4
+        uses: docker/metadata-action@v4 # PING
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v4 # PING
         with:
           context: .
           file: Dockerfile
