--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Install poetry
         run: |
-          pipx install poetry
+          pipx install poetry==${{ POETRY_VERSION }}
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -52,7 +52,6 @@ jobs:
 
       - name: Build and Publish
         run: |
-
           poetry config repositories.publish https://pypi.org/legacy/
           poetry publish -p ${{ secrets.PYPI_TOKEN }} -u __token__ -r publish --build
         shell: bash
