--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,5 +56,5 @@ requests-mock = "^1.11.0"
 sphinx = "^7.2.6"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.2"]
 build-backend = "poetry.core.masonry.api"
